test/expected/explain_efd.out
explain enum E : double x
                 ^
18: error: enum underlying type must be integral
